# bevy_gameplay_abilities

./: Cargo.toml  README.md
examples/: _0_basic_ability.rs  _1_area_effect.rs  _2_targeting.rs
examples/shared/: mod.rs
src/: ability.rs  ability_definition.rs  costs.rs  events.rs  lib.rs  tags.rs
