[package]
name = "bevy_abilities"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_behave = { workspace = true }
bevy_gameplay_effects = { workspace = true }
dyn-clone = "1.0.20"
bevy_hierarchical_tags = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
rand = "0.9.2"
